# EdHack-MEDUCA

./: .replit  CORRECCIONES_IMPLEMENTADAS.md  DOCUMENTACION_COMPLETA_MEDUCA.md  ERRORES_CORREGIDOS.md  FUNCIONALIDADES_EXAMENES.md  INSTRUCCIONES_PRUEBA.md  NUEVA_VISTA_DETALLADA.md  PRUEBA_EXAMENES_SUBIDOS.md  README.md  SISTEMA_HARDCODEADO.md  app.py  competencias_matematicas.py  config.py  create_sample_images.py  data_store.py  gemini_service.py  models.py  pdf_generator.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted--Prompt-Completo-del-Proyecto-Sistema-de-Evaluaci-n-Matem-tica-Inteligente-SEMI-Nombre-del-p-1755370094886_1755370094886.txt
static/css/: custom.css
static/uploads/: .gitkeep
templates/: base.html  crear_clase.html  crear_curso.html  dashboard_docente.html  dashboard_estudiante.html  feedback_estudiante.html  generar_examen.html  login.html  reporte_estudiantes.html  seleccionar_tipo_descarga.html  subir_examenes.html  ver_examen_detallado.html  ver_examenes_subidos.html  ver_resultados.html
